// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Hourly Component > should render error state correctly 1`] = `
<div>
  <div>
    <p>
      Error loading forecast data. Please try again later.
    </p>
  </div>
</div>
`;

exports[`Hourly Component > should render hourly forecast data correctly 1`] = `
<div>
  <div>
    <div
      class="flex flex-col space-y-4"
    >
      <div
        class="p-4 border border-gray-300 rounded-md cursor-pointer"
      >
        <div
          class="flex space-x-2 items-center"
        >
          <div
            class="flex-1"
          >
            <div
              class="flex flex-col space-y-2"
            >
              <div
                class="flex items-center justify-between"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="font-bold text-lg"
                  >
                    10 AM
                  </div>
                  <img
                    src="https://www.accuweather.com/assets/images/weather-icons/v2a/1.svg"
                  />
                  <div
                    class="font-bold text-3xl"
                  >
                    72
                    ° 
                    °F
                  </div>
                  <p>
                    Sunny
                  </p>
                </div>
                <div
                  class="text-sm flex items-center space-x-1"
                >
                  <span
                    class="material-icons-outlined text-gray-500"
                  >
                    water_drop
                  </span>
                  <span>
                    10
                    %
                  </span>
                </div>
              </div>
            </div>
          </div>
          <span
            class="material-icons-outlined text-gray-500"
          >
            expand_more
          </span>
        </div>
      </div>
      <div
        class="p-4 border border-gray-300 rounded-md cursor-pointer"
      >
        <div
          class="flex space-x-2 items-center"
        >
          <div
            class="flex-1"
          >
            <div
              class="flex flex-col space-y-2"
            >
              <div
                class="flex items-center justify-between"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="font-bold text-lg"
                  >
                    11 AM
                  </div>
                  <img
                    src="https://www.accuweather.com/assets/images/weather-icons/v2a/2.svg"
                  />
                  <div
                    class="font-bold text-3xl"
                  >
                    73
                    ° 
                    °F
                  </div>
                  <p>
                    Partly Cloudy
                  </p>
                </div>
                <div
                  class="text-sm flex items-center space-x-1"
                >
                  <span
                    class="material-icons-outlined text-gray-500"
                  >
                    water_drop
                  </span>
                  <span>
                    15
                    %
                  </span>
                </div>
              </div>
            </div>
          </div>
          <span
            class="material-icons-outlined text-gray-500"
          >
            expand_more
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hourly Component > should render loading state correctly 1`] = `
<div>
  <div>
    <p>
      Loading...
    </p>
  </div>
</div>
`;
